--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -1,7 +1,7 @@
 <!--
   templateType: blog
   isAvailableForNewContent: true
-  label: Sprout - blog index
+  label: Biglytics - blog index
   screenshotPath: ../images/template-previews/blog-index.png
 -->
 {% extends './layouts/base.html' %}
