--- a/src/css/templates/_blog.css
+++ b/src/css/templates/_blog.css
@@ -77,7 +77,7 @@
 /* Blog Navigation */
 
 .blog-navigation {
-    background-color: #34B5E5;
+    background-color: #618ebe;
     padding: 16px 0px;
 }
 
