--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -14,7 +14,7 @@
     {% module 'blog_listing_banner'
       path='../modules/blog-listing-banner',
       banner_image={
-        'src': get_asset_url('../images/blog-banner.png')
+        'src': get_asset_url('../images/dna-background-blue.png')
       }
     %}
     {# End Blog Listing Banner #}
