--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -12,15 +12,12 @@
 
     {# Blog Post Banner #}
     {% module 'blog_post_banner'
-      path='../modules/blog-post-banner',
-      bg_image={
-        'src': get_asset_url('../images/blog-post-banner.png')
-      }
+      path='../modules/blog-post-banner'
     %}
     {# End Blog Post Banner #}
 
     {# Blog Post Content #}
-    <div class="content-wrapper content-wrapper--narrow">
+    <div class="content-wrapper content-wrapper--narrow content-wrapper--blog-post">
       <article class="blog-post">
         <header class="blog-post__header">
           <h2 class="blog-post__title">{{ content.name }}</h2>
@@ -50,62 +47,67 @@
           {{ content.post_body }}
         </div>
         <footer class="blog-post__footer">
-          <div class="blog-post__footer__row-one">
-            <div class="blog-post__comments-buttons">
-              <button class="blog-post__show-comments button">View Comments</button>
-              <button class="blog-post__hide-comments hide-button button">Hide Comments</button>
-            </div>
+          <div class="blog-post__footer__row-one {% if !group.allow_comments %}blog-post__footer__row-one--centered{% endif %}">
+            {% if group.allow_comments %}
+              <div class="blog-post__comments-buttons">
+                <button class="blog-post__show-comments button">View Comments</button>
+                <button class="blog-post__hide-comments hide-button button">Hide Comments</button>
+              </div>
+            {% endif %}
             <div class="blog-post__social-sharing">
               <div class="social-links">
-                <a href="https://twitter.com/intent/tweet?original_referer={{ content.absolute_url }}" target="_blank" class="social-links__icon">
-                  {% icon
-                    name='twitter',
-                    purpose='semantic',
-                    style='SOLID',
-                    title='Share this blog post on Twitter'
-                  %}
-                </a>
-                <a href="http://www.facebook.com/share.php?u={{ content.absolute_url }}" target="_blank" class="social-links__icon">
-                  {% icon
-                    name='facebook-f',
-                    purpose='semantic',
-                    style='SOLID',
-                    title='Share this blog post on Facebook'
-                  %}
-                </a>
-                <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ content.absolute_url }}" target="_blank" class="social-links__icon">
-                  {% icon
-                    name='linkedin-in',
-                    purpose='semantic',
-                    style='SOLID',
-                    title='Share this blog post on LinkedIn'
-                  %}
-                </a>
-                <a href="mailto:?subject=Check out {{ content.absolute_url }} &body=Check out {{ content.absolute_url }}&media={{ content.featured_image }}" target="_blank" class="social-links__icon">
-                  {% icon
-                    name='envelope',
-                    purpose='semantic',
-                    style='SOLID',
-                    title='Share this blog post via email'
-                  %}
-                </a>
+                {% if group.show_social_link_twitter %}
+                  <a href="https://twitter.com/intent/tweet?original_referer={{ content.absolute_url }}" target="_blank" class="social-links__link">
+                    {% icon
+                      extra_classes='social-links__icon',
+                      name='twitter',
+                      purpose='semantic',
+                      style='SOLID',
+                      title='Share this blog post on Twitter'
+                    %}
+                  </a>
+                {% endif %}
+                {% if group.show_social_link_facebook %}
+                  <a href="http://www.facebook.com/share.php?u={{ content.absolute_url }}" target="_blank" class="social-links__link">
+                    {% icon
+                      extra_classes='social-links__icon',
+                      name='facebook-f',
+                      purpose='semantic',
+                      style='SOLID',
+                      title='Share this blog post on Facebook'
+                    %}
+                  </a>
+                {% endif %}
+                {% if group.show_social_link_linkedin %}
+                  <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ content.absolute_url }}" target="_blank" class="social-links__link">
+                    {% icon
+                      extra_classes='social-links__icon',
+                      name='linkedin-in',
+                      purpose='semantic',
+                      style='SOLID',
+                      title='Share this blog post on LinkedIn'
+                    %}
+                  </a>
+                {% endif %}
               </div>
             </div>
           </div>
-          <div class="blog-post__footer__row-two">
-            <div class="blog-post__comments-listing hide-comments">
-              {% module 'blog_comments'
-                path='@hubspot/blog_comments'
-              %}
+          {% if group.allow_comments %}
+            <div class="blog-post__footer__row-two">
+              <div class="blog-post__comments-listing hide-comments">
+                {% module 'blog_comments'
+                  path='@hubspot/blog_comments'
+                %}
+              </div>
             </div>
-          </div>
+          {% endif %}
         </footer>
       </article>
     </div>
     {# End Blog Post Content #}
 
     {# Blog Related Posts #}
-    <div class="content-wrapper">
+    <div class="content-wrapper content-wrapper--blog-post">
       {% module 'blog_related_posts'
         path='../modules/blog-related-posts'
       %}
