--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -68,6 +68,15 @@
             path='@hubspot/form',
             title='Get In Touch'
           %}
+            {% module_attribute "form" is_json=True %}
+              {
+                "form_id": "{# ddg:contact_form_id #}",
+                "response_type": "inline",
+                "message": "Thanks!",
+                "form_type": "HUBSPOT",
+                "gotowebinar_webinar_key": null
+              }
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
