--- a/src/templates/system/password-prompt.html
+++ b/src/templates/system/password-prompt.html
@@ -1,16 +1,20 @@
 <!--
   templateType: password_prompt_page
   isAvailableForNewContent: true
-  label: Biglytics - Password Prompt
+  label: Biglytics - password prompt
 -->
 {% extends '../layouts/base.html' %}
 
 {% block body %}
 <main class="body-container-wrapper">
-  <div style="background-image: url('{{ get_asset_url('../../images/hero-bg-desktop.png') }}'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; height: 150px; padding-bottom: 80px;"></div>
   <section class="content-wrapper">
     <div class="systems-page">
+      {% module 'content'
+        path='@hubspot/rich_text',
+        html='<h1>Password Required</h1><p>Please enter the password required to view this page.</p>'
+      %}
       {% module 'password_prompt'
+        extra_classes='password-prompt',
         path='@hubspot/password_prompt'
       %}
     </div>
