escape html in form code on landing page

--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -161,7 +161,7 @@
               {
                 "form_id": "{# ddg:info_form_id #}",
                 "response_type": "inline",
-                "message": "<a href="#">Here is your free Ebook</a> We will send you an email with the link as well.",
+                "message": "<a href=\"#\">Here is your free Ebook</a> We will send you an email with the link as well.",
                 "form_type": "HUBSPOT",
                 "gotowebinar_webinar_key": null
               }
