--- a/src/templates/landing-page-ebook.html
+++ b/src/templates/landing-page-ebook.html
@@ -155,7 +155,7 @@
           %}
             {% module_attribute "form" is_json=True %}
               {
-                "form_id": "15b6b8db-c699-4f51-9842-063e30af77b6",
+                "form_id": "{# ddg:info_form_id #}",
                 "response_type": "inline",
                 "message": "<a href=\"#\">Here is your free Ebook</a> We will send you an email with the link as well.",
                 "form_type": "HUBSPOT",
