--- a/src/templates/landing-page-ebook.html
+++ b/src/templates/landing-page-ebook.html
@@ -1,4 +1,3 @@
-
 <!--
   templateType: page
   isAvailableForNewContent: true
@@ -118,7 +117,7 @@
             path='@hubspot/linked_image',
             horizontal_alignment='CENTER',
             img={
-              'src': 'https://f.hubspotusercontent00.net/hubfs/7235158/big-data-graphic.png',
+              'src': get_asset_url('../images/landing/big_data_graphic.png'),
               'alt': 'Data',
               'size_type': 'auto'
             }
