update form message

--- a/src/templates/landing-page-webinar.html
+++ b/src/templates/landing-page-webinar.html
@@ -107,7 +107,7 @@
               {
                 "form_id": "{# ddg:webinar_form_id #}",
                 "response_type": "inline",
-                "message": "<a href=\"#\">Here is your free Ebook</a> We will send you an email with the link as well.",
+                "message": "<a href=\"#\">Click here</a> for your free on-demand webinar. We will send you an email with the link as well.",
                 "form_type": "HUBSPOT",
                 "gotowebinar_webinar_key": null
               }
