update template meta

--- a/src/templates/landing-page-consultation.html
+++ b/src/templates/landing-page-consultation.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Landing Page Consultation (Video, Meetings)
+  label: [Demo LP] Landing Page Consultation (Video, Meetings)
 -->
 {% extends "./layouts/base.html" %}
 
