update template meta

--- a/src/templates/landing-page-webinar.html
+++ b/src/templates/landing-page-webinar.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: [Demo LP] Landing Page Webinar
+  label: "[Demo LP] Landing Page Webinar"
 -->
 {% extends './layouts/base.html' %}
 
