--- a/src/templates/landing-page-ebook.html
+++ b/src/templates/landing-page-ebook.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: [Demo LP] Landing Page Ebook
+  label: "[Demo LP] Landing Page Ebook"
 -->
 {% extends './layouts/base.html' %}
 
