--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Landing Page
+  label: "[Demo LP] Landing Page Icons"
 -->
 {% extends './layouts/base.html' %}
 
