update template meta

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: About
+  label: "[Demo Web] Biglytics About"
 -->
 {% extends './layouts/base.html' %}
 
