--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Contact
+  label: "[Demo Web] Biglytics Contact"
 -->
 {% extends './layouts/base.html' %}
 
