--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Services
+  label: "[Demo Web] Biglytics Services"
 -->
 {% extends './layouts/base.html' %}
 
