--- a/src/templates/thank-you.html
+++ b/src/templates/thank-you.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Thank You Page
+  label: "[Demo Web] Biglytics Thank You Page"
 -->
 {% extends './layouts/base.html' %}
 
