--- a/src/templates/blank.html
+++ b/src/templates/blank.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Blank
+  label: "[Demo Web] Biglytics Blank"
 -->
 {% extends './layouts/base.html' %}
 
