--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Home
+  label: "[Demo Web] Biglytics Home"
 -->
 {% extends './layouts/base.html' %}
 
