--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Pillar Page
+  label: "[Demo Web] Biglytics Pillar Page"
 -->
 {% extends './layouts/base.html' %}
 
