--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Pricing Page
+  label: "[Demo Web] Biglytics Pricing Page"
 -->
 {% extends './layouts/base.html' %}
 
