--- a/src/templates/landing-page-webinar.html
+++ b/src/templates/landing-page-webinar.html
@@ -114,29 +114,12 @@
             {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module
-            path='@hubspot/rich_text'
-          %}
-            {% module_attribute 'html' %}
-              <footer class="footer footer--no-navigation">
-                <div class="footer__container">
-                  <div>
-                    Biglytics is a fictional company used for demo and training purposes by <a href="https://www.hubspot.com/">HubSpot</a>.
-                    <br />
-                    You shouldn't rely on the information on this site.
-                    Use of this site is subject to HubSpot's <a href="https://legal.hubspot.com/website-terms-of-use">Terms of Use</a> and <a href="https://legal.hubspot.com/privacy-policy">Privacy Policy</a>.
-                  </div>
-                </div>
-              </footer>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
   {% end_dnd_area %}
-</main>
 {% endblock body %}
 
 {% block footer %}
+  {% global_partial path="./partials/footer-no-navigation.html" %}
 {% endblock footer %}
+</main>
