add tokens for cta placement on blog post and home

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -47,7 +47,8 @@
         </div>
         <div class="blog-post__cta" style="text-align: center; padding-bottom: 50px;">
           {% module "cta",
-            path="@hubspot/cta"
+            path="@hubspot/cta",
+            guid="{# ddg:smart_cta_id #}"
           %}
         </div>
         <footer class="blog-post__footer">
