--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -45,7 +45,8 @@
         {% dnd_row %}
           {% dnd_module
             path='@hubspot/cta',
-            horizontal_alignment='CENTER'
+            horizontal_alignment='CENTER',
+            guid='{# ddg:simple_cta_id #}'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -223,7 +224,8 @@
         {% dnd_row %}
           {% dnd_module
             path='@hubspot/cta',
-            horizontal_alignment='LEFT'
+            horizontal_alignment='LEFT',
+            guid='{# ddg:simple_cta_id #}'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
