Revert "add tokens for cta placement on blog post and home"
This reverts commit 1dd75259245a136cb28b6e316e10401e7c7021f0.

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -47,8 +47,7 @@
         </div>
         <div class="blog-post__cta" style="text-align: center; padding-bottom: 50px;">
           {% module "cta",
-            path="@hubspot/cta",
-            guid="{# ddg:smart_cta_id #}"
+            path="@hubspot/cta"
           %}
         </div>
         <footer class="blog-post__footer">
