--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -45,8 +45,7 @@
         {% dnd_row %}
           {% dnd_module
             path='@hubspot/cta',
-            horizontal_alignment='CENTER',
-            guid='{# ddg:simple_cta_id #}'
+            horizontal_alignment='CENTER'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -224,8 +223,7 @@
         {% dnd_row %}
           {% dnd_module
             path='@hubspot/cta',
-            horizontal_alignment='LEFT',
-            guid='{# ddg:simple_cta_id #}'
+            horizontal_alignment='LEFT'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
