changed template token syntax

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -48,7 +48,7 @@
         <div class="blog-post__cta" style="text-align: center; padding-bottom: 50px;">
           {% module "cta",
             path="@hubspot/cta",
-            guid="{# ddg:smart_cta_id #}"
+            guid="{{ ddg.smart_cta_id }}"
           %}
         </div>
         <footer class="blog-post__footer">
