--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -70,7 +70,7 @@
           %}
             {% module_attribute "form" is_json=True %}
               {
-                "form_id": "{# ddg:contact_form_id #}",
+                "form_id": "{{ ddg.contact_form_id }}",
                 "response_type": "inline",
                 "message": "Thanks!",
                 "form_type": "HUBSPOT",
