--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -46,7 +46,7 @@
           {% dnd_module
             path='@hubspot/cta',
             horizontal_alignment='CENTER',
-            guid='{# ddg:simple_cta_id #}'
+            guid='{{ ddg.simple_cta_id }}'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -225,7 +225,7 @@
           {% dnd_module
             path='@hubspot/cta',
             horizontal_alignment='LEFT',
-            guid='{# ddg:simple_cta_id #}'
+            guid='{{ ddg.simple_cta_id }}'
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -342,7 +342,7 @@
           %}
             {% module_attribute "form" is_json=True %}
               {
-                "form_id": "{# ddg:info_form_id #}",
+                "form_id": "{{ ddg.info_form_id }}",
                 "response_type": "inline",
                 "message": "Thanks!",
                 "form_type": "HUBSPOT",
