--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -468,7 +468,7 @@
               %}
                 {% module_attribute "form" is_json=True %}
                   {
-                    "form_id": "{# ddg:info_form_id #}",
+                    "form_id": "{{ ddg.info_form_id }}",
                     "response_type": "inline",
                     "message": "Thanks!",
                     "form_type": "HUBSPOT",
