--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -218,7 +218,7 @@
           %}
             {% module_attribute "form" is_json=True %}
               {
-                "form_id": "{# ddg:info_form_id #}",
+                "form_id": "{{ ddg.info_form_id }}",
                 "response_type": "inline",
                 "message": "Thanks!",
                 "form_type": "HUBSPOT",
